Quorum/Library/Tests/Expressions/Fail/LoudComplaint.quorum
class Main
    action Test1 returns integer
    r   eturn 0
    end
    action Test2
    end